[TS-1928]